# YouTubeExtractor

./: .gitignore  README.md  main.py  main2.py  notes_and_words.txt  pyproject.toml
